# scheduler

./: .code-review-graphignore  .dockerignore  .env.dist  .gitignore  .mcp.json  .opencode.json  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.gemini/: settings.json  settings.json.bak
.github/: dependabot.yml
.playwright-mcp/: page-2026-06-11T10-06-46-066Z.yml  page-2026-06-11T10-07-01-545Z.yml  page-2026-06-11T10-09-04-836Z.yml  page-2026-06-11T10-09-27-982Z.yml  page-2026-06-12T10-07-19-078Z.yml  page-2026-06-12T10-08-02-479Z.yml  page-2026-06-12T10-08-36-433Z.yml  page-2026-06-12T10-08-42-732Z.yml  page-2026-06-12T10-09-53-014Z.yml  page-2026-06-12T10-10-43-692Z.yml  page-2026-06-12T10-29-35-670Z.yml  page-2026-06-12T10-29-49-366Z.yml  page-2026-06-12T10-30-10-602Z.yml  page-2026-06-12T10-31-16-324Z.yml  page-2026-06-12T10-32-32-644Z.yml  page-2026-06-12T10-32-44-978Z.yml  page-2026-06-12T10-35-04-332Z.yml  page-2026-06-12T10-35-17-522Z.yml  page-2026-06-12T10-35-28-675Z.yml  page-2026-06-12T10-35-40-791Z.yml  page-2026-06-12T10-35-52-240Z.yml  page-2026-06-12T10-36-06-936Z.yml  page-2026-06-12T10-36-30-188Z.yml  page-2026-06-12T10-36-42-418Z.yml  page-2026-06-12T10-36-54-197Z.yml  page-2026-06-12T10-37-15-986Z.yml  page-2026-06-12T10-37-27-381Z.yml  (+18 more)
backend/: .env  .env.dev  (+13 more)
engine/: .env  .env.dist  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  implicit_rules.json  pyproject.toml
engine/app/: __init__.py  main.py
engine/app/core/: __init__.py  config.py
engine/app/schemas/: __init__.py  input_schema.py  output_schema.py
engine/app/solver/: AGENTS.md  __init__.py  constraints.py  helpers.py  model.py  objective.py  result_builder.py
engine/clubscheduler_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
engine/doc/: business.md  solver-errors.md
engine/docs/: business.md  constraint-vocabulary.md  nominal-flow.md  solver-errors.md
engine/tests/: test_adaptive_timeout.py  test_age_order.py  test_capacity_slots.py  test_chaining_bonus.py  test_coach_enrichment.py  test_coach_rest_day.py  test_constraint_fixes.py  test_constraints.py  test_constraints_contiguity.py  test_engine.py  test_generate_contract.py  test_input_limits.py  test_max_consecutive_sessions.py  test_objective.py  test_result_builder.py  test_runtime.py  test_salarie_distribution.py  test_slot_usage.py  test_time_constraints.py  test_unused_slot_warnings.py
engine/tests/fixtures/: age_order_club.json  bccl_regression.json  consecutive_emerick.json  dense_club.json  impossible.json  medium_club.json  no_rest_enzo.json  overlap_anna.json  overlap_nicolas.json  score_hard_only_teams.json  simple_club.json  vacation_week.json
engine/tests/golden/: test_bccl_regression.py  test_consecutive.py  test_golden.py  test_overlap.py  test_score_penalty.py  test_two_pass.py
engine/tests/invariants/: test_invariants.py
engine/tests/perf/: test_perf_dense.py
engine/tests/semantic/: constraint_matrix.py  test_constraint_matrix.py  test_diagnostics.py  test_features.py  test_semantic_smoke.py
engine/tests/support/: __init__.py  pipeline.py
(+1155 files in other folders)
