[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clubscheduler-engine"
version = "0.1.0"
description = "ClubScheduler scheduling engine"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "ortools>=9.11,<10",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-timeout>=2,<3",
  "pytest-cov>=5,<6",
  "hypothesis>=6,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "bandit>=1.7,<2",
  "pre-commit>=3,<5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["app"]
show_error_codes = true
pretty = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ortools.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
