[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clubscheduler-engine"
version = "0.1.0"
description = "ClubScheduler scheduling engine"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "ortools>=9.11,<10",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-timeout>=2,<3",
  "pytest-cov>=5,<6",
  "hypothesis>=6,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<3",
  "bandit>=1.7,<2",
  "pre-commit>=3,<5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra -m 'not perf'"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "perf: slow performance-gate tests (dense-club budget); excluded by default, run on CI main only",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Broaden beyond the defaults (E4/E7/E9/F): imports order (I), bugbear (B),
# pyupgrade (UP), simplify (SIM), comprehensions (C4), warnings (W), Ruff (RUF).
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = [
    "E501",  # line length: cosmetic; format handles code, long French strings remain
    "RUF001", "RUF002", "RUF003",  # ambiguous unicode: legitimate French text (é, à, …)
    "B008",  # function call in default arg: FastAPI Depends pattern
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["app"]
show_error_codes = true
pretty = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ortools.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
